[libqtappfw] Add POI support
This is wrapper of https://gerrit.automotivelinux.org/gerrit/apps/agl-service-poi
the POI binding, which defines interfaces for POI service applications and POI
client applications.

https://jira.automotivelinux.org/browse/SPEC-3291

Bug-AGL: SPEC-3291

--- a/libqtappfw/CMakeLists.txt
+++ b/libqtappfw/CMakeLists.txt
@@ -59,7 +59,8 @@ set (SUBDIRS
 	telephony
 	voice
 	voice-capabilities
-	weather)
+	weather
+	poi)
 
 add_headers(message.h messageengine.h responsemessage.h)
 add_sources(message.cpp messageengine.cpp responsemessage.cpp)
