[poiapp] Introduce the POI binding via libqtappfw
Set USE_POI_BINDINGto be 1 in MainApp.h when you enable the above added code.

--- a/poi-yelp/config.xml.in
+++ b/poi-yelp/config.xml.in
@@ -9,6 +9,7 @@
     <param name="navigation" value="ws" />
     <param name="windowmanager" value="ws" />
     <param name="homescreen" value="ws" />
+    <param name="poi" value="ws" />
   </feature>
   <feature name="urn:AGL:widget:required-permission">
     <param name="urn:AGL:permission::public:no-htdocs" value="required" />
